# AutoCheckins

./: .gitignore  config.json  core.py  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: AutoCheckBJMF.yml  build_release.yml
