[project]
name = "AutoCheckBJMF_GUI"
version = "2.0.0"
description = "AutoCheckBJMF Class Cube Check-in GUI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "AutoCheckBJMF", email = "support@example.com" }
]
dependencies = [
    "flet",
    "schedule",
    "requests",
    "beautifulsoup4"
]

[tool.flet]
product = "AutoCheckBJMF"
company = "AutoCheckBJMF Team"
copyright = "Copyright (C) 2025"
